--- a/src/global.css
+++ b/src/global.css
@@ -35,7 +35,7 @@ main {
 }
 
 .search-bar {
-  padding: 10px 0px;
+  padding: 0px 0px 30px 0px;
 }
 
 /*Global Form Styling*/
@@ -55,13 +55,23 @@ input {
   margin: 3px;
 }
 
+input#search-field {
+  outline: none;
+}
+
 input[type="submit"] {
   background-color: rgb(255, 219, 147);
   font-weight: 800;
+  transition: transform 0.2s ease;
+}
+
+input[type="submit"]:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 ::placeholder {
-  color: rgb(51, 51, 51);
+  color: rgb(136, 134, 134);
 }
 
 /*Results Section*/
@@ -76,8 +86,12 @@ input[type="submit"] {
 }
 
 .city-details {
-  font-size: 1.4rem;
+  font-size: 1.2rem; /*12px*/
   line-height: 1.1;
+}
+
+.city-details strong {
+  font-weight: 800;
 }
 
 .current-temperature {
