--- a/src/global.css
+++ b/src/global.css
@@ -31,8 +31,8 @@ main {
 .weather-app {
   display: block;
   width: 95%;
-  max-width: 700px;
-  margin: 0px auto;
+  max-width: 600px;
+  margin: 60px auto;
 }
 
 .search-bar {
@@ -85,30 +85,33 @@ input[type="submit"]:hover {
 .current-temperature {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-end; /* Aligns to right on desktop */
+  justify-content: flex-end;
 }
 
 /* Mobile Responsive Stacking */
 @media (max-width: 768px) {
-  .weather-results {
+  .weather-results,
+  .location {
     justify-content: center;
     text-align: center;
   }
 
   .weather-results-text,
-  .current-temperature {
+  .current-temperature,
+  .location {
     flex-basis: 100%; /* Takes full width */
   }
 
   .current-temperature {
-    justify-content: center; /* Centers the temperature unit horizontally */
-    margin-top: 15px; /* Adds space between the stacked elements */
+    justify-content: center;
+    margin-top: 15px;
   }
 }
 
 .search-city {
   font-size: 3.6rem; /*34px*/
   font-weight: 900;
+  margin: 0;
 }
 
 .city-details {
@@ -140,6 +143,47 @@ input[type="submit"]:hover {
   font-size: 2rem; /*20px*/
   font-weight: 800;
   top: 1.6rem;
+}
+
+/*Forecast*/
+.forecast-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 30px 0px;
+}
+
+.forecast-result {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: white;
+  justify-content: space-between;
+  gap: 5rem;
+  margin: 25px auto;
+  padding: 5px 25px;
+  border-radius: 20px;
+  font-weight: 700;
+}
+.forecast-date {
+  width: 100px;
+  text-align: left;
+}
+.forecast-icon {
+  text-align: center;
+}
+
+.temperature-group {
+  display: flex;
+  gap: 5px;
+}
+
+.forecast-result strong {
+  font-weight: 800;
+  color: rgb(6, 114, 151);
+}
+
+.low-temp {
+  color: rgba(7, 136, 179, 0.618);
 }
 
 /*Footer bar*/
