--- a/src/global.css
+++ b/src/global.css
@@ -36,7 +36,7 @@ main {
 }
 
 .search-bar {
-  padding: 0px 0px 30px 0px;
+  padding: 30px 0px;
 }
 
 /*Global Form Styling*/
@@ -214,3 +214,5 @@ footer a:hover {
   color: rgb(255, 219, 147);
   font-weight: 500;
 }
+
+/* placeholder text animation*/
