--- a/src/global.css
+++ b/src/global.css
@@ -15,7 +15,7 @@ body {
   min-height: 100vh; /*set to full viewport height*/
   display: flex;
   flex-direction: column;
-  background-color: rgb(151, 203, 219);
+  background: rgb(151, 203, 219);
   color: rgb(51, 51, 51);
   font-family: "Nunito", sans-serif;
   font-size: 1.6rem; /*set base font to 16px*/
@@ -32,7 +32,15 @@ main {
   display: block;
   width: 95%;
   max-width: 600px;
-  margin: 0px auto;
+  margin: 60px auto;
+  text-align: center;
+}
+
+h1 {
+  font-size: 5rem;
+  font-weight: 900;
+  line-height: 1;
+  padding: 60px 0px 0px 0px;
 }
 
 .search-bar {
@@ -150,7 +158,7 @@ input[type="submit"]:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 30px 0px;
+  padding: 20px 0px;
 }
 
 .forecast-result {
@@ -196,7 +204,8 @@ input[type="submit"]:hover {
 
 /*Footer bar*/
 footer {
-  margin: auto;
+  margin: 0 auto;
+  max-width: 100%;
   padding: 20px 0px;
   text-align: center;
   font-size: 1.2rem; /*12px*/
